# timmy-rocket

./: Cargo.toml  README.md
frontend/: ember-cli-build.js  package.json
frontend/app/: index.html  router.js
frontend/app/adapters/: application.js
frontend/app/components/: datetime-field.js  days-chart.js  delete-button.js  gantt-chart.js  hours-chart.js  stop-watch.js  tags-chart.js  tags-field.js  toggle-button.js  validated-input.js
frontend/app/controllers/: application.js  login.js  projects.js  timer.js
frontend/app/controllers/projects/: edit.js  index.js  view.js
frontend/app/helpers/: format-timedifference.js  format-timeperiod.js
frontend/app/models/: activity.js  project.js  user.js
frontend/app/routes/: projects.js
frontend/app/routes/projects/: edit.js  index.js  new.js  view.js
frontend/app/serializers/: activity.js  project.js
frontend/app/styles/: _stopwatch.scss  app.css  app.scss
frontend/app/templates/: application.hbs  login.hbs  projects.hbs  timer.hbs
frontend/app/templates/components/: datetime-field.hbs  days-chart.hbs  (+8 more)
frontend/config/: environment.js
migrations/20170722192402_create_projects/: up.sql
migrations/20170725152903_create_activities/: up.sql
migrations/20170725155048_not_null_activities_project_id/: down.sql  up.sql
migrations/20170725214130_remove_timezone_activity/: down.sql  up.sql
migrations/20170801130936_create_users/: up.sql
migrations/20170801131755_create_sessions/: up.sql
migrations/20170801162008_add_user_to_projects/: down.sql  up.sql
src/: db_help.rs  lib.rs  main.rs  models.rs
(+25 files in other folders)
