[package]
name = "timmy-rocket"
version = "0.1.0"
authors = ["Matthew Hall <matthew@quickbeam.me.uk>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.3.0"
rocket_codegen = "0.3.0"
diesel = { version = "0.14.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "0.14.0"
r2d2 = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_cors = "0.1.4"
pwhash = "0.1"
base64 = "~0.6.0"
rand = "0.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
